--- a/index.html
+++ b/index.html
@@ -461,8 +461,16 @@
           </div>
         </div>
       </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#contact'"
+      />
     </section>
 
+
+    <!--
     <section id="projects-frontend">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Frontend Designs</h1>
@@ -531,6 +539,7 @@
         onclick="location.href='./#contact'"
       />
     </section>
+  -->
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
