--- a/daynight.html
+++ b/daynight.html
@@ -47,6 +47,11 @@
         <source src="day&night.mp4">
       </video>
     </div>
+    <div class="text-container">
+      <p>
+        Beautiful transition of Day & Night Theme.
+      </p>
+    </div>
     
     <div class="btn-container btn-gap">
       <button
