--- a/daynight.html
+++ b/daynight.html
@@ -43,7 +43,7 @@
     </div>
     <br>
     <div class="img-container">
-      <video autoplay loop width="800">
+      <video controls loop width="800">
         <source src="day&night.mp4">
       </video>
     </div>
