--- a/onboard.html
+++ b/onboard.html
@@ -42,7 +42,7 @@
     </div>
     <br>
     <div class="img-container">
-      <video autoplay loop width="1000">
+      <video controls loop width="1000">
         <source src="onboard-design.mp4">
       </video>
     </div>
