--- a/fruitydrinks.html
+++ b/fruitydrinks.html
@@ -43,7 +43,7 @@
     </div>
     <br>
     <div class="img-container">
-      <video autoplay loop width="800">
+      <video controls loop width="800">
         <source src="fruit-drinks.mp4">
       </video>
     </div>
