--- a/adventure.html
+++ b/adventure.html
@@ -25,12 +25,12 @@
       <div class="details-container1 color-container">
         <div class="article-container">
           <img
-            src="assets/scenery.png"
+            src="assets/Ecommerce-Website.png"
             alt="Project 1"
             class="project-img"
           />
         </div>
-        <h2 class="experience-sub-title project-title title-gap">Adventure tour</h2>
+        <h2 class="experience-sub-title project-title title-gap">E-commerce Website</h2>
       </div>
     </div>
     </section>
@@ -38,7 +38,7 @@
     <div class="text-container">
       <h2 class="heading-details">Details</h2>
       <p>
-        Adventure tour is not just an app, it’s a gateway to digital outdoor adventures. It's for them who seek to explore hiking trails in a new light. Whether you’re a solo wanderer or a curious group, Hikers transforms your hiking experience into an unforgettable journey of discovery. The app’s meticulous design and features empower you to unlock the world of hiking in a way that resonates with your unique spirit of adventure. This is the web version of the app.
+        This is a Ecommerce Website designed for clothes.
       </p> 
     </div>
     <div class="btn-container btn-gap">
