--- a/index.html
+++ b/index.html
@@ -324,12 +324,12 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="assets/scenery.png"
+                src="assets/Ecommerce-Website.png"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Adventure Tour</h2>
+            <h2 class="experience-sub-title project-title">Ecommerce Website</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
